@@ -1,3 +1,1 @@
 alpha0:2025/04/25
-    - Initial files structure.
-    - Initial documentation and idea for the system.
